--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -52,7 +52,6 @@ University of Southern California}
 \thispagestyle{empty}
 
 \bigskip 
-\noindent \textbf{[JJH: Jen, please give is daily updated on length.]}
 \noindent \textbf{[Updated length: 39 pages (references and some comments and dialogue included.) This excludes title and addresses pages.]}
 
 \bigskip
@@ -95,15 +94,15 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \section{Introduction}
 
-\noindent A large body of evidence documents that high-quality early childhood programs boost the skills of disadvantaged children.\footnote{See \citet{Blau_Currie_2006_HEE}, \citet{Cunha_Heckman_ea_2006_HEE}, \citet{Duncan_Magnuson_2013_JEP}, \citet{Almond-Currie_2011_JEP}, and \citet{Elango_Hojman_etal_2016_Early-Edu} for surveys.} Most of this research estimates benefits in terms of gains in cognitive test scores, school readiness, and measures of early-life social behavior. A few studies analyze longer-term benefits in terms of completed education, adult health, crime and labor income.\footnote{Examples include: \citet{Heckman_Moon_etal_2010_QE}, \citet{Havnes_Mogstad_2011_AEJEP}, and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} Rigorous evidence on its long-term economic benefits of these programs is scarce.\footnote{\citet{Barnett_Masse_2007_EER} and \citet{Heckman_Moon_etal_2010_RateofReturn} present a life cycle cost-benefit analysis of the Perry Preschool Program. Our approach is more comprehensive in terms of outcomes analyzed and in providing a general methodology that can be replicated to assess the social efficiency of any other program.}
+\noindent A large body of evidence documents that high-quality early childhood programs boost the skills of disadvantaged children.\footnote{See \citet{Blau_Currie_2006_HEE}, \citet{Cunha_Heckman_ea_2006_HEE}, \citet{Duncan_Magnuson_2013_JEP}, \citet{Almond-Currie_2011_JEP}, and \citet{Elango_Hojman_etal_2016_Early-Edu} for surveys.} Most of this research estimates benefits in terms of gains in cognitive test scores, school readiness, and measures of early-life social behavior. A few studies analyze longer-term benefits in terms of completed education, adult health, crime and labor income.\footnote{Examples include: \citet{Heckman_Moon_etal_2010_QE}, \citet{Havnes_Mogstad_2011_AEJEP}, and \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.} Rigorous evidence on their long-term economic benefits is scarce.\footnote{\citet{Belfield_Nores_etal_2006_JHR} and \citet{Heckman_Moon_etal_2010_RateofReturn} present a life cycle cost-benefit analysis of the Perry Preschool Program. Our approach is more comprehensive in terms of outcomes analyzed and in providing a general methodology that can be replicated to assess the social efficiency of any other program.}
 
-This paper investigates the social benefits and costs of an influential pair of programs that target disadvantaged children. We analyze two virtually identical early childhood programs conducted in North Carolina that were evaluated by randomized controlled trials. Participants were followed up through the mid 30s: the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE. Both programs were launched in the 1970s. They began early in life (at 8 weeks of life) and engaged participants until age 5. The program generated numerous positive treatment effects.\footnote{A companion paper, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, reports these treatment effects.} Parents of participants (primarily mothers) received free childcare that facilitated parental employment and adult education. The program generated a $13.7\%$ (s.e.\ $3\%$) per-annum tax-adjusted internal rate of return and a $7.3$ (s.e.\ $1.84$) benefit/cost ratio.
+This paper investigates the social benefits and costs of an influential pair of programs that target disadvantaged children. We analyze two virtually identical early childhood programs conducted in North Carolina that were evaluated by randomized controlled trials. Participants were followed up through the mid 30s: the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE. Both programs were launched in the 1970s. They began early in life (at 8 weeks of life) and engaged participants until age 5. The program generated numerous positive treatment effects.\footnote{A companion paper, \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, reports these treatment effects.} Parents of participants (primarily mothers) received free childcare that facilitated parental employment and adult education. The program had a $13.7\%$ (s.e.\ $3\%$) per-annum tax-adjusted internal rate of return and a $7.3$ (s.e.\ $1.84$) benefit/cost ratio.
 
 The program is a prototype for many programs planned or in place today.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: Infant Health and Development Program (IHDP) in eight different cities in the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Current Educare programs in the U.S. are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}. Appendix~\ref{app:details-educare} lists these Educare programs, all of which implement curricula based on ABC/CARE.} About 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{43\% of African-American children were eligible at its inception.} Implementation of the ABC/CARE curriculum on disadvantaged populations is an effective, socially efficient strategy for promoting social mobility.\footnote{\citet{Garcia_2016_National-Implementation-ECI} report that if ABC/CARE were implemented on the current pool of eligible children in the population, the intra-black (black disadvantaged to black advantaged) gap in high-school graduation, years of education, employment and labor income at age 30 for females will be reduced by $110\%$, $76\%$, $22\%$, and $30\%$, respectively. It would eradicate the black--white high-school graduation gap, reduce the years of education gap to 0.12 years, reduce the employment gap to 14 percentage points, and reduce the labor income gap to 4,075 USD (2016). For males, the program would eradicate the intra-black high-school graduation gap, reduce the years of education gap to 0.18 years, reduce the employment gap to 9 percentage points, and reduce the labor income gap to 12,150 USD (2016).}
 
 This paper addresses a fundamental problem that arises in evaluating social programs. Few program evaluations have complete life-cycle histories of participants. In our data, the oldest experimental subject is in his/her mid 30s. We forecast the full life-cycle benefits and costs of the program using non-experimental data guided by economic theory.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} discuss data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as noted below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions for validation of its forecasts as we do.} We compute internal rates of return and benefit/cost ratios that draw on the large array of benefits and costs generated. In constructing our estimates, we account for model estimation and forecasting error and the welfare cost of taxation required to fund the program. Our estimates survive extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples that approximate the life cycles of experimentals in their post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. For the forecasts to be valid, the mapping of inputs to outputs needs to be unaffected by treatment across cohorts (i.e., the mapping needs to be ``invariant). We test and do not reject this property using non-experimental samples that overlap with the experimental samples.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects.
+We construct synthetic cohorts from non-experimental samples that approximate the life cycles of experimentals in their post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. For the forecasts to be valid, the production functions mapping inputs to outputs across cohorts need to be unaffected by treatment (i.e., the mapping needs to be ``invariant''). We test and do not reject this property using non-experimental samples that overlap with the experimental samples.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects.
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data using economic and econometric theory enhances the validity of long-run forecasts of experimental results. 
 
@@ -119,17 +118,17 @@ The goal of these programs was to enhance the life skills of disadvantaged child
 
 The design and implementation of ABC and CARE were very similar. Both had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to treatment. The second phase of the study consisted of home visits from ages 5 through 8. The first phase of CARE, from birth until age 5, had an additional treatment arm of home visits designed to improve home environments.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}
 
-ABC recruited four cohorts of children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. For both programs, families of potential participants were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score on a childhood risk index of disadvantage.\footnote{See  Appendix~\ref{app:eligibility-pop} for details on the construction of the ``risk index.''}
+ABC recruited four cohorts of children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. For both programs, families of potential participants were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score on a childhood index of disadvantage.\footnote{See  Appendix~\ref{app:eligibility-pop} for details on the construction of the ``risk index.''}
 
 Our analysis uses data from the first phase and pools the ABC treatment group with that of the CARE treatment groups. We do not use the data from the CARE group that only received home visits in the early years. \cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} test and do not reject the hypothesis that the CARE data through age 5 (without home visits) and the ABC data (through age 5) come from the same distribution.
 
-The initial ABC sample consisted of 120 families. Due to attrition and non-response, the study sample was reduced to 111 subjects: 53 in the treatment group and 58 in the control group. In CARE, the initial sample had 65 families: 23 were randomized to a control group, 25 to a family education treatment group, and 17 to a center-based childcare treatment group that followed ABC protocols.\footnote{There were no randomization compromises in CARE. During preschool, 5 subjects attrited (3 in the treatment group, 1 in the family education group, and 1 in the control group). Details in attrition and non-response are presented in Appendix~\ref{appendix:background}.} We use standard weighting methodologies to account for attrition and non-response.\footnote{See Appendix~\ref{app:method_partialobs}.}
+The initial ABC sample consisted of 120 families. Due to attrition and non-response, the study sample was reduced to 111 subjects: 53 in the treatment group and 58 in the control group. In CARE, the initial sample had 65 families: 23 were randomized to a control group, 25 to a family education treatment group, and 17 to a center-based childcare treatment group that followed ABC protocols.\footnote{There were no randomization compromises in CARE. During preschool, 5 subjects attrited (3 in the treatment group, 1 in the family education group, and 1 in the control group). Details on attrition and non-response are presented in Appendix~\ref{appendix:randomization}.} We use standard weighting methodologies to account for attrition and non-response.\footnote{See Appendix~\ref{app:method_partialobs}.}
 
-For both programs, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are not available for both ABC and CARE.} In addition, there is information from administrative criminal records, a physician-administered medical survey, when the subjects were in their mid 30s.\footnote{See  Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial attrition for these data collections. The methodology that we propose addresses missing data in either of these two outcome categories.} Many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\% respectively).\footnote{We thus face the problem of substitution bias (see \citet{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE,Kline_Walters_2016_QJE}). The alternative arrangements were generally lower quality than ABC/CARE (see Appendix~\ref{appendix:tetanus} for details on these alternatives). In our main analysis we compare treatment- and control-group children, irrespective of take-up of alternatives. In Appendix~\ref{appendix:cbaresultscont}, we disaggregate our analysis to distinguish treatment effects by type of alternative selected by the control group. We next formally describe our forecast procedure.}
+For both programs, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics from birth until age 8. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are not available for both ABC and CARE.} In addition, there is information from administrative criminal records, a physician-administered medical survey, when the subjects were in their mid 30s.\footnote{See  Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups after dropping the individuals for whom we have no crime or health information. There is substantial attrition for these data collections. The methodology that we propose addresses missing data in either of these two outcome categories.} Many control-group children in both ABC and CARE attended alternative formal childcare arrangements (75\% and 74\% respectively).\footnote{There we address the problem of substitution bias (see \citet{Heckman_1992_randomization,Heckman_Hohmann_etal_2000_QJE,Kline_Walters_2016_QJE}). The alternative arrangements were generally lower quality than ABC/CARE (see Appendix~\ref{appendix:tetanus} for details on these alternatives). In our main analysis we compare treatment- and control-group children, irrespective of take-up of alternatives. In Appendix~\ref{appendix:cbaresultscont}, we disaggregate our analysis to distinguish treatment effects by type of alternative selected by the control group. We next formally describe our forecast procedure.}
 
 \section{Forecasting Life-cycle Costs and Benefits: Method} \label{section:cbamethodology}
 
-To explain our forecasting procedure, the following notation is useful (we suppress individual subscripts to avoid notational clutters). $W=1$ indicates that parents referred to the program participate in the randomization protocol. $W=0$ indicates otherwise. $R$ indicates randomization into treatment ($R = 1$) or control ($R = 0$). $D$ indicates whether or not a family attends the program. $D:= R$ implies compliance with the initial randomization protocol. Lowercase variables $d$ and $r$ denote realizations of $D$ and $R$, respectively.
+To explain our forecast procedure, the following notation is useful (we suppress individual subscripts to avoid notational clutter). $W=1$ indicates that parents referred to the program participate in the randomization protocol. $W=0$ indicates otherwise. $R$ indicates randomization into treatment ($R = 1$) or control ($R = 0$). $D$ indicates whether or not a family attends the program. $D:= R$ implies compliance with the initial randomization protocol. Lowercase variables $d$ and $r$ denote realizations of $D$ and $R$, respectively.
 
 Individuals are eligible to participate in the program if their baseline background variables $\bm{B}\in\mathcal{B}_0$, where $\mathcal{B}_0$ is the set of scores on the childhood risk index that determines program eligibility. Because all of the eligible individuals with the option to participate chose to do so $(W=1\text{, and } D=R)$, we can safely interpret the treatment effects generated by the experiment as average treatment effects for the eligible population and not just as average treatment effects for the treated.\footnote{All providers of health care and social services (referral agencies) in the area of the ABC/CARE study were informed of the programs. They referred mothers whom they considered disadvantaged. Eligibility was corroborated before randomization. Our conversations with the program staff indicate that all but one of the referred mothers attended and agreed to participate in the initial randomization \citep{Ramey-etal_2012-ABC}.}
 
@@ -145,7 +144,7 @@ Randomization identifies this parameter in the experimental sample. The principa
 \end{equation}
 $d \in\{0,1\},  k\in\{e,n\}, \ \ a\in\{1,\dots,\bar{A}\}$ where $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ is a vector of structural production relationships mapping inputs $\bm{X}^d_{k,a}, \bm{B}_k$ into outputs holding error term $\bm{\varepsilon}^d_{k,a}$ fixed.\footnote{Fixing and conditioning are fundamentally different concepts. See \cite{Haavelmo_1943_Econometrica} and \citet{Heckman_Pinto_2015_EconometTheory} for discussions.} $ \bm{B}_k$ are baseline variables not affected by treatment. $\bm{X}^d_{k,a}$ are variables potentially affected by treatment. $\bar{A}$ is the oldest age considered in our analysis.
 
-The relationship between the inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $\bm{Y}^d_{k,a}$ can, in principle, differ between experimental and non-experimental samples although in our data this is not the case. Equation~\eqref{eq:outcome} characterizes the outcomes of the two treatment regimes in any sample, including a non-experimental samples, with no empirical counterpart for the case $d = 1$. We present conditions for identifying and estimating $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental samples. A crucial condition is that there are no differences in the technologies and in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes and samples:
+The relationship between the inputs $\bm{X}^d_{k,a}, \bm{B}_k$ and outputs $\bm{Y}^d_{k,a}$ can, in principle, differ between experimental and non-experimental samples although in our data this is not the case. Equation~\eqref{eq:outcome} characterizes the outcomes of the two treatment regimes in any sample, including a non-experimental sample with no empirical counterpart for the case $d = 1$. We present conditions for identifying and estimating $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental samples. A crucial condition is that there are no differences in the technologies and in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes and samples:
 
 \begin{subequations}
 \begin{eqnarray}
@@ -160,12 +159,12 @@ F_{k,a}^d \left( \bm{\varepsilon}_{k,a}^d \right) &=&  F_{k,a} \left( \bm{\varep
 \item \textbf{Construct a Baseline Synthetic Cohort.} Choose a non-experimental sample with $\bm{B}_n \in \bm{B}_0$.
 \item \textbf{Determine the Relevant Inputs.} Find a set of input variables $\bm{X}^d_{k,a}$ (i) that are available in both experimental and non-experimental data; (ii) with support in the non-experimental data containing the support of their counterparts in the experimental data; (iii) that are non-trivial determinants of outcomes; and (iv) that are affected by treatment.
 \item \textbf{Estimate Equation~\eqref{eq:outcome} and evaluate the testable implications of Conditions~\eqref{eq:crucial} and~\eqref{eq:crucial2}.} Using the sample constructed in step 1 and the inputs chosen in step 2, estimate the technology. A crucial step for making forecasts of general validity is establishing exogeneity of the inputs of the technology or accounting for non-exogeneity using appropriate econometric methods.
-\item \textbf{Test the Validity of the Technology Estimated in Step 3 with the Experimental Sample.} Using the technology estimated in step 3 and validated in step 4, predict treatment effects within the experimental sample and contrast them with the realized treatment effects.
+\item \textbf{Test the Validity of the Technology Estimated in Step 3 in the Experimental Sample.} Using the technology estimated in step 3 and validated in step 4, predict treatment effects within the experimental sample and contrast them with the realized treatment effects.
 \item \textbf{Forecast the Experimental Data Out of Sample.} Using the technology estimated in step 3 and validated in step 4, forecast life-cycle treatment effects. Adjust for cohort effects as necessary.
 \item \textbf{Account for Forecasting and Sampling Error.} Construct standard errors that account for estimation and forecasting error in the experimental and the non-experimental data.
 \end{enumerate}
 
-\subsection{Forecasting of Labor Income}
+\subsection{Forecasting Labor Income}
 
 We illustrate our methodology for forecasting labor income. For a more extensive discussion, see Appendix~\ref{appendix:incomplete}.
 
