--- a/heckman.bib
+++ b/heckman.bib
@@ -31388,14 +31388,25 @@ Welfare Reform Academy},
   Timestamp                = {2015.12.20}
 }
 
+@Article{Garcia_Heckman_Ziff_2018_EER,
+  Title                    = {Gender Differences in the Effects of Early Childhood Education},
+  Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, James J. and Ziff, Anna L.},
+  Journal                  = {European Economics Review, Forthcoming},
+  Year                     = {2018},
+  Note                     = {Unpublished},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2017.04.20}
+}
+
 @Unpublished{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED,
   Title                    = {Gender Differences in the Effects of Early Childhood Education},
   Author                   = {Garc\'{\i}a, Jorge Luis and Heckman, James J. and Ziff, Anna L.},
   Note                     = {Unpublished},
   Year                     = {2017},
 
-  Owner                    = {Stallings_LLC},
-  Timestamp                = {2017.04.20}
+  Owner                    = {Jenna},
+  Timestamp                = {2018.07.04}
 }
 
 @Article{Garcia_etal_2019_ECE_IMHJ,
